--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             color: #fff;
             padding: 50px;
             overflow-x: hidden;
+            margin-left: 20px; /* Verschiebt alles nach links */
         }
         .container {
             max-width: 800px;
@@ -32,7 +33,7 @@
             }
         }
         h1 {
-            font-size: 36px;
+            font-size: 42px;
             font-weight: 600;
         }
         h1 span {
@@ -91,12 +92,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>Hello <br>I am <span>FullRisk</span>.</h1>
-        <p>A A hobby programmer interested in java and html..</p>
+        <h1>Hello 👋<br>I am <span>FullRisk</span>.</h1>
+        <p>A passionate developer interested in various technologies and always looking to improve.</p>
         <p>Check me out on <a href="https://github.com/FullRisk" target="_blank">GitHub</a>!</p>
         
         <div class="projects">
             <h2>Projects</h2>
+            <!-- Projekt 1 -->
             <div class="project">
                 <div class="project-title">GalaxyBot</div>
                 <div class="project-desc">A Discord bot with 1.7M+ users for support systems, moderation & team management.</div>
@@ -107,6 +109,7 @@
                     <span class="tag">Python</span>
                 </div>
             </div>
+            <!-- Projekt 2 -->
             <div class="project">
                 <div class="project-title">NoRiskClient</div>
                 <div class="project-desc">A custom Minecraft client with extensive modding & multiplayer features.</div>
@@ -118,6 +121,29 @@
                     <span class="tag">Dart</span>
                     <span class="tag">Svelte</span>
                     <span class="tag">TypeScript</span>
+                </div>
+            </div>
+            <!-- Projekt 3 -->
+            <div class="project">
+                <div class="project-title">SkyChat</div>
+                <div class="project-desc">A cloud-based real-time chat platform with end-to-end encryption.</div>
+                <div class="tags">
+                    <span class="tag">React</span>
+                    <span class="tag">Node.js</span>
+                    <span class="tag">MongoDB</span>
+                    <span class="tag">WebSockets</span>
+                </div>
+            </div>
+            <!-- Projekt 4 -->
+            <div class="project">
+                <div class="project-title">CryptoTracker</div>
+                <div class="project-desc">A cryptocurrency tracker with live data and portfolio management.</div>
+                <div class="tags">
+                    <span class="tag">React</span>
+                    <span class="tag">Node.js</span>
+                    <span class="tag">Express</span>
+                    <span class="tag">MongoDB</span>
+                    <span class="tag">API</span>
                 </div>
             </div>
         </div>
