--- a/index.html
+++ b/index.html
@@ -8,28 +8,29 @@
     <style>
         body {
             font-family: 'Fira Code', monospace;
-            text-align: center;
             background-color: #0d0d0d;
             color: #fff;
             padding: 50px;
             margin: 0;
+            text-align: left;
         }
         .container {
             max-width: 900px;
             margin: auto;
-            opacity: 0;
-            transform: translateY(-20px);
-            animation: fadeIn 1s ease-out forwards;
         }
-        @keyframes fadeIn {
+        @keyframes slideIn {
             from {
                 opacity: 0;
-                transform: translateY(-20px);
+                transform: translateX(50px);
             }
             to {
                 opacity: 1;
-                transform: translateY(0);
+                transform: translateX(0);
             }
+        }
+        .intro {
+            opacity: 0;
+            animation: slideIn 1s ease-out forwards;
         }
         h1 {
             font-size: 48px;
@@ -43,7 +44,8 @@
             color: #bbb;
         }
         .github-link {
-            display: inline-block;
+            display: flex;
+            align-items: center;
             background: #1a1a1a;
             padding: 10px 20px;
             margin-top: 20px;
@@ -53,6 +55,11 @@
             text-decoration: none;
             border: 2px solid #9b59b6;
             transition: all 0.3s;
+            width: fit-content;
+        }
+        .github-link::before {
+            content: "➜";
+            margin-right: 10px;
         }
         .github-link:hover {
             background: #9b59b6;
@@ -60,14 +67,15 @@
         }
         .projects {
             margin-top: 40px;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 15px;
         }
         .project {
             background: #1a1a1a;
             padding: 20px;
-            margin: 15px auto;
             border-radius: 10px;
             box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.1);
-            max-width: 600px;
             transition: transform 0.3s ease-in-out;
         }
         .project:hover {
@@ -98,12 +106,11 @@
 </head>
 <body>
     <div class="container">
-        <h1>Hello 👋<br> I am <span>Tim Lohrer</span>.</h1>
+        <h1 class="intro">Hello 👋<br> I am <span>Tim Lohrer</span>.</h1>
         <p>Ein 18-jähriger Full-Stack-Entwickler aus Deutschland mit über 5 Jahren Erfahrung.</p>
-        <a href="https://github.com/FullRisk" target="_blank" class="github-link">🔗 Check me out on GitHub!</a>
+        <a href="https://github.com/FullRisk" target="_blank" class="github-link">Check me out on GitHub!</a>
         
         <div class="projects">
-            <h2>Projects</h2>
             <div class="project">
                 <div class="project-title">GalaxyBot</div>
                 <div class="project-desc">Ein Discord-Bot mit 1.7M+ Nutzern für Support, Moderation & Team-Management.</div>
@@ -125,6 +132,27 @@
                     <span class="tag">Dart</span>
                     <span class="tag">Svelte</span>
                     <span class="tag">TypeScript</span>
+                </div>
+            </div>
+            <div class="project">
+                <div class="project-title">SkyChat</div>
+                <div class="project-desc">Eine cloudbasierte Echtzeit-Chat-Plattform mit Ende-zu-Ende-Verschlüsselung.</div>
+                <div class="tags">
+                    <span class="tag">React</span>
+                    <span class="tag">Node.js</span>
+                    <span class="tag">MongoDB</span>
+                    <span class="tag">WebSockets</span>
+                </div>
+            </div>
+            <div class="project">
+                <div class="project-title">CryptoTracker</div>
+                <div class="project-desc">Ein Kryptowährungs-Tracker mit Live-Daten und Portfolio-Management.</div>
+                <div class="tags">
+                    <span class="tag">React</span>
+                    <span class="tag">Node.js</span>
+                    <span class="tag">Express</span>
+                    <span class="tag">MongoDB</span>
+                    <span class="tag">API</span>
                 </div>
             </div>
         </div>
