--- a/index.html
+++ b/index.html
@@ -122,55 +122,23 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="intro">Hello 👋<br> I am <span>Tim Lohrer</span>.</h1>
+        <h1 class="intro">Hello<br> I am <span>FullRisk</span>.</h1>
         <div class="content">
-            <p>Ein 18-jähriger Full-Stack-Entwickler aus Deutschland mit über 5 Jahren Erfahrung.</p>
+            <p>Ein 15 Jahre alter hobby-Programmierer der es liebt neue Sachen zu lernen.</p>
             <a href="https://github.com/FullRisk" target="_blank" class="github-link">Check me out on GitHub!</a>
         </div>
         
         <div class="projects content">
             <div class="project">
-                <div class="project-title">GalaxyBot</div>
-                <div class="project-desc">Ein Discord-Bot mit 1.7M+ Nutzern für Support, Moderation & Team-Management.</div>
-                <div class="tags">
-                    <span class="tag">JavaScript</span>
-                    <span class="tag">TypeScript</span>
-                    <span class="tag">Vue</span>
-                    <span class="tag">Python</span>
+                <div class="project-title">Portable Dimensions</div>
+                <div class="project-desc">Eine Minecraft Mod die eine neue Art Portale hinzufügt.</div>
                 </div>
             </div>
             <div class="project">
                 <div class="project-title">NoRiskClient</div>
-                <div class="project-desc">Ein Minecraft-Client mit erweiterten Modding- & Multiplayer-Funktionen.</div>
-                <div class="tags">
-                    <span class="tag">Java</span>
-                    <span class="tag">Kotlin</span>
-                    <span class="tag">Rust</span>
-                    <span class="tag">Go</span>
-                    <span class="tag">Dart</span>
-                    <span class="tag">Svelte</span>
-                    <span class="tag">TypeScript</span>
+                <div class="project-desc">Ein Minecraft Client der auf Customization beruht.</div>    
                 </div>
             </div>
-            <div class="project">
-                <div class="project-title">SkyChat</div>
-                <div class="project-desc">Eine cloudbasierte Echtzeit-Chat-Plattform mit Ende-zu-Ende-Verschlüsselung.</div>
-                <div class="tags">
-                    <span class="tag">React</span>
-                    <span class="tag">Node.js</span>
-                    <span class="tag">MongoDB</span>
-                    <span class="tag">WebSockets</span>
-                </div>
-            </div>
-            <div class="project">
-                <div class="project-title">CryptoTracker</div>
-                <div class="project-desc">Ein Kryptowährungs-Tracker mit Live-Daten und Portfolio-Management.</div>
-                <div class="tags">
-                    <span class="tag">React</span>
-                    <span class="tag">Node.js</span>
-                    <span class="tag">Express</span>
-                    <span class="tag">MongoDB</span>
-                    <span class="tag">API</span>
                 </div>
             </div>
         </div>
