--- a/index.html
+++ b/index.html
@@ -6,30 +6,39 @@
     <title>Tim Lohrer | Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Fira Code', monospace;
-            background-color: #000;
-            color: #fff;
-            padding: 50px;
+        * {
             margin: 0;
-            text-align: left;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body, html {
+            height: 100%;
+            font-family: 'Fira Code', monospace;
+            background-color: #fff; /* Hintergrund weiß */
+            color: #000; /* Standardtext schwarz */
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
         .container {
+            text-align: center;
             max-width: 1000px;
-            margin: auto;
-            padding-left: 50px;
+            width: 100%;
+            padding: 50px;
         }
-        @keyframes slideInLeft {
+        /* Animationen für jedes Element */
+        @keyframes fadeInUp {
             from {
                 opacity: 0;
-                transform: translateX(-50px);
+                transform: translateY(50px);
             }
             to {
                 opacity: 1;
-                transform: translateX(0);
+                transform: translateY(0);
             }
         }
-        @keyframes slideInRight {
+
+        @keyframes fadeInRight {
             from {
                 opacity: 0;
                 transform: translateX(50px);
@@ -39,25 +48,79 @@
                 transform: translateX(0);
             }
         }
-        .intro span {
-            opacity: 0;
-            animation: slideInLeft 1s ease-out forwards;
+
+        @keyframes smoothRight {
+            from {
+                opacity: 0;
+                transform: translateX(50px);
+            }
+            50% {
+                transform: translateX(10px);
+            }
+            to {
+                opacity: 1;
+                transform: translateX(0);
+            }
         }
-        .content {
+
+        /* Animationen für die Elemente */
+        .intro .hello {
             opacity: 0;
-            animation: slideInRight 1s ease-out 0.5s forwards;
+            animation: fadeInUp 1s ease-out forwards;
+            animation-delay: 0.2s;
+            color: #000; /* "Hello" ist jetzt schwarz */
         }
+
+        .intro .i-am {
+            opacity: 0;
+            animation: fadeInUp 1s ease-out forwards;
+            animation-delay: 0.5s;
+            color: #000; /* "I am" ist jetzt schwarz */
+        }
+
+        .intro .name {
+            opacity: 0;
+            animation: smoothRight 1.5s ease-out forwards;
+            animation-delay: 0.8s;
+            color: #a855f7; /* Magenta für "FullRisk" */
+        }
+
+        .content .text {
+            opacity: 0;
+            animation: fadeInUp 1s ease-out forwards;
+            animation-delay: 1.2s;
+            color: #000; /* Text ist jetzt schwarz */
+        }
+
+        .content .github-link {
+            opacity: 0;
+            animation: fadeInUp 1s ease-out forwards;
+            animation-delay: 1.5s;
+        }
+
+        .projects {
+            opacity: 0;
+            animation: fadeInUp 1s ease-out forwards;
+            animation-delay: 1.8s;
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 20px;
+            justify-items: center;
+            margin-top: 50px;
+        }
+
+        /* Styling für die Elemente */
         h1 {
             font-size: 64px;
             font-weight: bold;
             margin-bottom: 30px;
         }
         h1 span {
-            color: #a855f7;
+            color: #a855f7; /* Magenta für FullRisk */
         }
         p {
             font-size: 22px;
-            color: #ddd;
+            color: #000; /* Text in schwarz */
         }
         .github-link {
             display: flex;
@@ -72,6 +135,8 @@
             border: 2px solid #a855f7;
             transition: all 0.3s;
             width: fit-content;
+            margin-left: auto;
+            margin-right: auto;
         }
         .github-link::before {
             content: "➜";
@@ -81,21 +146,22 @@
             background: #a855f7;
             color: #fff;
         }
-        .projects {
-            margin-top: 50px;
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 20px;
-        }
         .project {
             background: #1a1a1a;
             padding: 25px;
             border-radius: 12px;
             box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.15);
+            border: 2px solid #333; /* Hellgraue Umrandung */
             transition: transform 0.3s ease-in-out;
+            width: 100%;
+            max-width: 350px;
+            text-align: left;
+            cursor: pointer;
+            text-decoration: none;
         }
         .project:hover {
             transform: scale(1.05);
+            border: 2px solid #ddd; /* Umrandung wird etwas heller bei Hover */
         }
         .project-title {
             font-size: 26px;
@@ -122,25 +188,25 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="intro">Hello<br> I am <span>FullRisk</span>.</h1>
+        <h1 class="intro">
+            <span class="hello">Hello</span><br> 
+            <span class="i-am">I am</span> 
+            <span class="name">FullRisk</span>.
+        </h1>
         <div class="content">
-            <p>Ein 15 Jahre alter hobby-Programmierer der es liebt neue Sachen zu lernen.</p>
+            <p class="text">Ein 15 Jahre alter hobby-Programmierer der es liebt neue Sachen zu lernen.</p>
             <a href="https://github.com/FullRisk" target="_blank" class="github-link">Check me out on GitHub!</a>
         </div>
         
-        <div class="projects content">
-            <div class="project">
+        <div class="projects">
+            <a href="https://example.com/portable-dimensions" class="project">
                 <div class="project-title">Portable Dimensions</div>
                 <div class="project-desc">Eine Minecraft Mod die eine neue Art Portale hinzufügt.</div>
-                </div>
-            </div>
-            <div class="project">
+            </a>
+            <a href="https://example.com/noriskclient" class="project">
                 <div class="project-title">NoRiskClient</div>
                 <div class="project-desc">Ein Minecraft Client der auf Customization beruht.</div>    
-                </div>
-            </div>
-                </div>
-            </div>
+            </a>
         </div>
     </div>
 </body>
