--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
             opacity: 0;
             animation: fadeInUp 1s ease-out forwards;
             animation-delay: 2.5s;
-            font-size: 10px;
-            color: #000;
+            font-size: 5px;
+            color: #8E8E8E;
             margin-top: 50px;
         }
         .footer a {
