--- a/index.html
+++ b/index.html
@@ -240,7 +240,15 @@ and is interested in websites..</p>
             </a>
             <a href="https://example.com/noriskclient" class="project">
                 <div class="project-title">ArmourGuard</div>
-                <div class="project-desc">Bewahrt den Spieler davor das seine Rüstung kaputt geht.</div>    
+                <div class="project-desc">Bewahrt den Spieler davor das seine Rüstung kaputt geht.</div>   
+                
+            </a>            <a href="https://example.com/portable-dimensions" class="project">
+                <div class="project-title">Portable Dimensions</div>
+                <div class="project-desc">Eine Minecraft Mod die eine neue Art Portale hinzufügt.</div>
+            </a>
+            <a href="https://example.com/noriskclient" class="project">
+                <div class="project-title">ArmourGuard</div>
+                <div class="project-desc">Bewahrt den Spieler davor das seine Rüstung kaputt geht.</div>   
             </a>
         </div>
 
