--- a/index.html
+++ b/index.html
@@ -243,12 +243,12 @@ and is interested in websites..</p>
                 <div class="project-desc">Bewahrt den Spieler davor das seine Rüstung kaputt geht.</div>   
                 
             </a>            <a href="https://example.com/portable-dimensions" class="project">
-                <div class="project-title">Portable Dimensions</div>
-                <div class="project-desc">Eine Minecraft Mod die eine neue Art Portale hinzufügt.</div>
+                <div class="project-title">Kommt noch...</div>
+                <div class="project-desc"></div>
             </a>
             <a href="https://example.com/noriskclient" class="project">
-                <div class="project-title">ArmourGuard</div>
-                <div class="project-desc">Bewahrt den Spieler davor das seine Rüstung kaputt geht.</div>   
+                <div class="project-title">Kommt noch...</div>
+                <div class="project-desc"></div>   
             </a>
         </div>
 
