--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         </h1>
         <div class="content">
             <p class="text">A 15 year old hobby programmer who loves learning new things
-and is interested in websites..</p>
+and is interested in websites.</p>
             <a href="https://github.com/FullRisk" target="_blank" class="github-link">My GitHub!</a>
         </div>
 
