--- a/index.html
+++ b/index.html
@@ -148,6 +148,33 @@
             width: fit-content;
             margin-left: auto;
             margin-right: auto;
+               }
+         }
+        .client {
+            display: flex;
+            align-items: center;
+            background: #1a1a1a;
+            padding: 12px 25px;
+            margin-top: 25px;
+            border-radius: 5px;
+            color: #2C7977;
+            font-size: 20px;
+            text-decoration: none;
+            border: 2px solid #2C7977;
+            transition: all 0.3s;
+            width: fit-content;
+            margin-left: auto;
+            margin-right: auto;
+               }
+        .client::before {
+            content: "➜";
+            margin-right: 12px;
+        }
+            }
+        .client:hover {
+            background: #2C7977;
+            color: #fff;
+        }
         }
         .github-link::before {
             content: "➜";
@@ -226,6 +253,7 @@
             <p class="text">A 15 year old hobby programmer who loves learning new things
 and is interested in websites.</p>
             <a href="https://github.com/FullRisk" target="_blank" class="github-link">My GitHub!</a>
+            <a href="norisk.gg" target="_blank" class="client">The Client im playing with</a>
         </div>
 
         <!-- Titel für Projekte -->
@@ -234,19 +262,19 @@ and is interested in websites.</p>
         </div>
 
         <div class="projects">
-            <a href="https://example.com/portable-dimensions" class="project">
+            <a href="" class="project">
                 <div class="project-title">Portable Dimensions</div>
                 <div class="project-desc">Eine Minecraft Mod die eine neue Art Portale hinzufügt.</div>
             </a>
-            <a href="https://example.com/noriskclient" class="project">
+            <a href="" class="project">
                 <div class="project-title">ArmourGuard</div>
                 <div class="project-desc">Bewahrt den Spieler davor das seine Rüstung kaputt geht.</div>   
                 
-            </a>            <a href="https://example.com/portable-dimensions" class="project">
+            </a>            <a href="" class="project">
                 <div class="project-title">Kommt noch...</div>
                 <div class="project-desc"></div>
             </a>
-            <a href="https://example.com/noriskclient" class="project">
+            <a href="" class="project">
                 <div class="project-title">Kommt noch...</div>
                 <div class="project-desc"></div>   
             </a>
