--- a/index.html
+++ b/index.html
@@ -11,6 +11,27 @@
             padding: 0;
             box-sizing: border-box;
         }
+    .navbar {
+        width: 100%;
+        background-color: #1a1a1a;
+        padding: 15px 0;
+        text-align: center;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        z-index: 1000;
+    }
+    .navbar a {
+        color: #fff;
+        text-decoration: none;
+        margin: 0 15px;
+        font-size: 18px;
+        transition: color 0.3s;
+    }
+    .navbar a:hover {
+        color: #a855f7;
+    }
         body, html {
             height: 100%;
             font-family: 'Fira Code', monospace;
@@ -218,7 +239,11 @@
         }
     </style>
 </head>
-<body>
+<body><div class="navbar">
+    <a href="index.html">Home</a>
+    <a href="about.html">Über mich</a>
+    <a href="contact.html">Kontakt</a>
+</div>
     <div class="container">
         <h1 class="intro">
             <span class="hello">Hello</span><br> 
