--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 </head>
 <body><div class="navbar">
     <a href="index.html">Home</a>
-    <a href="about.html">Über mich</a>
+    <a href="projetcs.html">Projekte</a>
     <a href="contact.html">Kontakt</a>
 </div>
     <div class="container">
