--- a/index.html
+++ b/index.html
@@ -11,6 +11,36 @@
             padding: 0;
             box-sizing: border-box;
         }
+        /* Button Styling */
+button.dark-mode-btn {
+  background: none;
+  color: white;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+/* Light Mode Styles */
+body.light-mode {
+  background-color: white;
+  color: black;
+}
+
+nav.light-mode {
+  background-color: #f0f0f0;
+  color: black;
+}
+
+/* Dark Mode Styles */
+body.dark-mode {
+  background-color: #121212;
+  color: white;
+}
+
+nav.dark-mode {
+  background-color: #333;
+  color: white;
+}
     .navbar {
         width: 100%;
         background-color: #1a1a1a;
@@ -243,6 +273,7 @@
     <a href="index.html">Home</a>
     <a href="projetcs.html">Projekte</a>
     <a href="contact.html">Kontakt</a>
+    <button id="darkModeToggle" class="dark-mode-btn">🌙</button>
 </div>
     <div class="container">
         <h1 class="intro">
