--- a/index.html
+++ b/index.html
@@ -114,7 +114,24 @@ nav.dark-mode {
                 transform: translateX(0);
             }
         }
-
+        .stars {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 0; 
+            pointer-events: none; 
+        }
+        .star {
+            position: absolute;
+            width: 3px; 
+            height: 3px;
+            background: white;
+            border-radius: 50%; 
+            opacity: 1; 
+            animation: starAnimation 30s linear infinite; 
+        }
         /* Animationen für die Elemente */
         .intro .hello {
             opacity: 0;
