--- a/index.html
+++ b/index.html
@@ -367,4 +367,11 @@ toggleButton.addEventListener('click', () => {
 });
 
 </body>
+
+    <audio id="backgroundMusic" loop>
+    <source src="backgroundmusic.mp3" type="audio/mpeg">
+    Dein Browser unterstützt kein Audio-Element.
+</audio>
+<button id="musicToggle">🔊 Musik an</button>
+
 </html>
