--- a/index.html
+++ b/index.html
@@ -290,12 +290,8 @@ nav.dark-mode {
     <a href="index.html">Home</a>
     <a href="projetcs.html">Projekte</a>
     <a href="contact.html">Kontakt</a>
-    <audio id="backgroundMusic" loop>
-    <source src="backgroundmusic.mp3" type="audio/mpeg">
-    Dein Browser unterstützt kein Audio-Element.
-</audio>
-<button id="musicToggle">🔊 Musik an</button>
 </div>
+      <audio id="bg-music" src="backgroundmusik.mp3" loop></audio>
     <div class="container">
         <h1 class="intro">
             <span class="hello">Hello</span><br> 
