--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ nav.dark-mode {
     Dein Browser unterstützt kein Audio-Element.
 </audio>
 <button id="musicToggle">🔊 Musik an</button>
-
+<source src="audio/backgroundmusic.mp3" type="audio/mpeg">
 </div>
     <div class="container">
         <h1 class="intro">
