--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
+    <audio autoplay loop>
+    <source src="musik.mp3" type="audio/mpeg">
+    Dein Browser unterstützt kein Audio-Element.
+</audio>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FullRisk | Portfolio</title>
