--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <audio autoplay loop>
-    <source src="musik.mp3" type="audio/mpeg">
+    <source src="backgroundmusic.mp3" type="audio/mpeg">
     Dein Browser unterstützt kein Audio-Element.
 </audio>
     <meta charset="UTF-8">
