--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <audio autoplay loop>
-    <source src="backgroundmusic.mp3" type="audio/mpeg">
-    Dein Browser unterstützt kein Audio-Element.
+<audio loop autoplay>
+        <source src="backgroundmusic.mp3">
+
 </audio>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
