--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kontakt</title>
+    <title>Contact</title>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>
         /* Allgemeines Styling */
@@ -127,14 +127,14 @@
     <!-- Hauptinhalt -->
     <div class="content">
         <img src="pfp.png" alt="Profilbild" class="profile-img">
-        <h1>Kontakt</h1>
-        <p>Hier kannst du meine Kontaktinformationen kopieren.</p>
+        <h1>FullRisk</h1>
+        <p>All meine Contacts.</p>
 
         <div class="buttons">
-            <button class="copy-btn" onclick="copyToClipboard('fullrisk@email.com')">📧 E-Mail</button>
-            <button class="copy-btn" onclick="copyToClipboard('https://github.com/FullRisk')">🐙 GitHub</button>
-            <button class="copy-btn" onclick="copyToClipboard('https://twitter.com/fullrisk')">🐦 Twitter</button>
-            <button class="copy-btn" onclick="copyToClipboard('+49 123 456789')">📞 Telefon</button>
+            <button class="copy-btn" onclick="copyToClipboard('me.fullrisk@gmail.com')">E-Mail</button>
+            <button class="copy-btn" onclick="copyToClipboard('https://github.com/FullRisk')">GitHub</button>
+            <button class="copy-btn" onclick="copyToClipboard('hab kein twitter lol')">Twitter</button>
+            <button class="copy-btn" onclick="copyToClipboard('leg eier')">Nummer</button>
         </div>
     </div>
 
