--- a/index.html
+++ b/index.html
@@ -15,36 +15,36 @@
             padding: 0;
             box-sizing: border-box;
         }
-        /* Button Styling */
-button.dark-mode-btn {
-  background: none;
-  color: white;
-  border: none;
-  font-size: 24px;
-  cursor: pointer;
-}
+           /* Button Styling */
+        button.dark-mode-btn {
+            background: none;
+            color: white;
+            border: none;
+            font-size: 24px;
+            cursor: pointer;
+        }
 
-/* Light Mode Styles */
-body.light-mode {
-  background-color: white;
-  color: black;
-}
+        /* Light Mode Styles */
+        body.light-mode {
+            background-color: white;
+            color: black;
+        }
+  nav.light-mode {
+            background-color: #f0f0f0;
+            color: black;
+        }
 
-nav.light-mode {
-  background-color: #f0f0f0;
-  color: black;
-}
+        /* Dark Mode Styles */
+        body.dark-mode {
+            background-color: #121212;
+            color: white;
+        }
 
-/* Dark Mode Styles */
-body.dark-mode {
-  background-color: #121212;
-  color: white;
-}
+        nav.dark-mode {
+            background-color: #333;
+            color: white;
+        }
 
-nav.dark-mode {
-  background-color: #333;
-  color: white;
-}
     .navbar {
         width: 100%;
         background-color: #1a1a1a;
@@ -306,6 +306,20 @@ nav.dark-mode {
         .footer a:hover {
             color: #f1f1f1;
         }
+           /* Dark Mode Button Styling */
+        button.dark-mode-btn {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            background: #333;
+            color: white;
+            border: none;
+            border-radius: 5px;
+        }
+
+        button.dark-mode-btn:hover {
+            background: #555;
+        }
     </style>
 </head>
 <body><div class="navbar">
@@ -356,5 +370,29 @@ and is interested in websites.</p>
             <p>&copy; 2025 FullRisk. Alle Rechte vorbehalten. | <a href="https://github.com/FullRisk">GitHub</a></p>
         </div>
     </div>
+    
+      <script>
+        // Dark Mode Toggle Script
+        const themeToggleButton = document.getElementById('theme-toggle');
+
+        themeToggleButton.addEventListener('click', () => {
+            document.body.classList.toggle('dark-mode');
+            document.body.classList.toggle('light-mode');
+            if (document.body.classList.contains('dark-mode')) {
+                localStorage.setItem('theme', 'dark');
+            } else {
+                localStorage.setItem('theme', 'light');
+            }
+        });
+
+        // Beim Laden der Seite Theme von LocalStorage übernehmen
+        if (localStorage.getItem('theme') === 'dark') {
+            document.body.classList.add('dark-mode');
+            document.body.classList.remove('light-mode');
+        } else {
+            document.body.classList.add('light-mode');
+            document.body.classList.remove('dark-mode');
+        }
+    </script>
 </body>
 </html>
