--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
         <h1 class="intro">
             <span class="hello">Hello</span><br> 
             <span class="i-am">I am</span> 
-            <span class="name">FullRisk</span>.
+            <span class="name">FullRisk</span>
         </h1>
         <div class="content">
             <p class="text">A 15 year old hobby programmer who loves learning new things
